# spotidry

./: .gitignore  .lefthook.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  spotipy-test.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml  tests.yml
spotidry/: __init__.py  __main__.py  cli.py  spotidry.py  spotify.py
spotidry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_main.py  test_scrolling.py  test_spotify_cache.py  test_spotify_config_and_connect.py  test_spotify_init_and_controls.py  test_spotify_printing_and_setup.py
