[metadata]
name = spotidry
version = 0.0.1
author = Mike Boiko
author_email = mike@boiko.ca
description = A boring CLI Spotify client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikeboiko/spotidry
project_urls =
    Bug Tracker = https://github.com/mikeboiko/spotidry/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = spotidry
python_requires = >=3.6
install_requires =
    spotipy
    pyyaml

[options.entry_points]
console_scripts =
    spotidry = spotidry.cli:main
