[metadata]
name = spotidry
version = 0.0.6
author = Mike Boiko
author_email = mike@boiko.ca
description = A boring Spotify CLI client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikeboiko/spotidry
project_urls =
    Bug Tracker = https://github.com/mikeboiko/spotidry/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options] # {{{1
packages = spotidry
python_requires = >=3.6
install_requires =
    appdirs
    spotipy
    pyyaml

[options.entry_points] # {{{1
console_scripts =
    spotidry = spotidry.__main__:main

[yapf] # {{{1
# https://github.com/google/yapf#knobs
BASED_ON_STYLE = google
SPACES_BEFORE_COMMENT = 2
COLUMN_LIMIT = 90
BLANK_LINES_AROUND_TOP_LEVEL_DEFINITION = 1
SPLIT_BEFORE_FIRST_ARGUMENT = 1

[flake8] # {{{1

# This only matters when E501 isn't suppressed
max-line-length = 90

ignore =
    E116,
    E124,
    E127,
    E261,
    E302,
    E305,
    E402,
    E501,
    E701
    E722,
    W503,
    W504,
